k8s/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres
    namespace: default # namespace onde o deployment vai ser criado, pro FLUX poder ver
spec:
  selector: # label do pod QUE ELE VAI BUSCAR.
    app: postgres
  ports:
      - protocol: TCP
        port: 5432 #port que vai receber
        targetPort: 5432 # port que vai redirecionar
