k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default # namespace onde o deployment vai ser criado, pro FLUX poder ver
  annotations:
    ##ler todos os ingress aplicado no k8s.
    ##Ele quer q o nginx leia
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # /$2 significa que ele vai pegar o segundo grupo de regex e vai jogar na url da api
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api(/|$)(.*)
            backend:
              service:
                name: api
                port:
                  number: 3000
